--- a/index.html
+++ b/index.html
@@ -23,34 +23,39 @@
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@beta/dist/js.cookie.min.js"></script>
 </head>
 <body>
-
+<br>
 <div class="container">
-  <div class="card-panel">
-    <h5>Dock Demo Wallet</h5>
+  <div class="card-panel" style="background-color: #2c2b3f; color: white">
+    <h3><img src="favicon.png" style="float:left;">CHAPI Demo Wallet</h3>
     <p>
-      By clicking 'Accept' on page load, you have registered this page with your
-      browser, and now it can act as a test wallet.
+      <i>
+        By clicking 'Accept' on page load, you have registered this page with your
+        browser so it can act as a test wallet.
+      </i>
     </p>
 
-    <div class="card-panel hide" id="logged-in">
+    <div class="card-panel hide" id="logged-in" style="color: black">
       <p>
         <strong>Logged in:</strong> <span id="username"></span>
 
         <h6>Wallet Contents:</h6>
         <ol id="walletContents"></ol>
       </p>
-      <a class="waves-effect waves-light btn" id="logoutButton">Reset and Logout</a>
+      <a class="waves-effect waves-light btn-large" id="logoutButton">Reset and Logout</a>
     </div>
 
-    <div class="card-panel hide" id="logged-out">
+    <div class="card-panel hide" id="logged-out" style="color: black">
       <p>
-        To start using the wallet, click the <strong>Login</strong> button.
+        To start using the wallet, click the <strong>Login</strong> button below.
       </p>
       <p>
-        For purposes of this demo, we will skip Registration and just use a
-        test account.
+        <i>
+          For purposes of this demo, we will skip Registration and just use a
+          test account.
+        </i>
+
       </p>
-      <a class="waves-effect waves-light btn" id="loginButton">Login</a>
+      <a class="waves-effect waves-light btn-large purple" id="loginButton">Login</a>
     </div>
   </div>
 </div>
