--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h6>Wallet Contents:</h6>
         <ol id="walletContents"></ol>
       </p>
-      <a class="waves-effect waves-light btn-large" id="logoutButton">Reset and Logout</a>
+      <a class="waves-effect waves-light btn-large red darken-4" id="logoutButton">Reset and Logout</a>
     </div>
 
     <div class="card-panel hide" id="logged-out" style="color: black">
