--- a/wallet-ui-get.html
+++ b/wallet-ui-get.html
@@ -21,38 +21,44 @@
 </head>
 <body>
 
+
 <div class="container">
-  <h5>Wallet get() event</h5>
-
-  <div class="card-panel hide" id="logged-in">
-    <div id="confirm">
-      <p>Origin <span id="requestOrigin"></span> is requesting information:</p>
-
-      <p><span id="requestReason"></span></p>
+  <div class="card-panel" style="background-color: #2c2b3f">
+    <div style="color: white">
+      <h3><img src="favicon.png" style="float:left;">CHAPI Demo Wallet</h3>
+      <h5>get() event</h5>
     </div>
 
-    <div id="userArea">
-      <p><strong>Logged in:</strong> <span id="username"></span></p>
-      <a class="waves-effect waves-light btn-small" id="logoutButton">Reset and Logout</a>
+    <div class="card-panel hide" id="logged-in">
+      <div id="confirm">
+        <p>Origin <span id="requestOrigin"></span> is requesting information:</p>
 
-      <h6>Wallet Contents:</h6>
-      <ol id="walletContents"></ol>
+        <p><span id="requestReason"></span></p>
+      </div>
+
+      <div id="userArea">
+        <p><strong>Logged in:</strong> <span id="username"></span></p>
+        <a class="waves-effect waves-light btn-small red darken-4" id="logoutButton">Reset and Logout</a>
+
+        <h6>Wallet Contents:</h6>
+        <ol id="walletContents"></ol>
+      </div>
     </div>
-  </div>
 
-  <div class="card-panel hide" id="logged-out">
-    <p>
-      In order to share a credential with the requesting party:
-    </p>
+    <div class="card-panel hide" id="logged-out">
+      <p>
+        In order to share a credential with the requesting party:
+      </p>
 
-    <ol>
-      <li>Register a wallet with your browser (for example,
-        the <a href="https://chapi-demo-wallet.digitalbazaar.com/">Demo Wallet</a>).</li>
-      <li>Click the <strong>Login</strong> button.</li>
-      <li>Click on a Share button next to an appropriate credential.</li>
-    </ol>
+      <ol>
+        <li>Register a wallet with your browser (for example,
+          the <a href="https://docknetwork.github.io/chapi-demo-wallet/">Demo Wallet</a>).</li>
+        <li>Click the <strong>Login</strong> button.</li>
+        <li>Click on a Share button next to an appropriate credential.</li>
+      </ol>
 
-    <a class="waves-effect waves-light btn" id="loginButton">Login</a>
+      <a class="waves-effect waves-light btn purple" id="loginButton">Login</a>
+    </div>
   </div>
 </div>
 
