--- a/wallet-ui-store.html
+++ b/wallet-ui-store.html
@@ -22,7 +22,11 @@
 <body>
 
 <div class="container">
-  <h5>Wallet store() event</h5>
+  <div class="card-panel" style="background-color: #2c2b3f">
+    <div style="color: white">
+      <h3><img src="favicon.png" style="float:left;">CHAPI Demo Wallet</h3>
+      <h5>store() event</h5>
+    </div>
 
   <div class="card-panel hide" id="logged-in">
     <div id="confirm">
@@ -32,20 +36,20 @@
 
       <p><strong>issuer:</strong> <span id="credentialIssuer"></span></p>
 
-      <a class="waves-effect waves-light btn" id="confirmButton">Confirm</a>
-      <a class="waves-effect waves-light btn" id="cancelButton">Cancel</a>
+      <a class="waves-effect waves-light btn purple" id="confirmButton">Confirm</a>
+      <a class="waves-effect waves-light btn red darken-4" id="cancelButton">Cancel</a>
     </div>
 
     <div id="userArea" class="hide">
       <p><strong>Logged in:</strong> <span id="username"></span></p>
-      <a class="waves-effect waves-light btn-small" id="logoutButton">Reset and Logout</a>
+      <a class="waves-effect waves-light btn-small red darken-4" id="logoutButton">Reset and Logout</a>
 
       <p><strong>Credential stored!</strong></p>
 
       <h6>Wallet Contents:</h6>
       <ol id="walletContents"></ol>
 
-      <a class="waves-effect waves-light btn center" id="doneButton">Done</a>
+      <a class="waves-effect waves-light btn center purple" id="doneButton">Done</a>
     </div>
   </div>
 
@@ -56,11 +60,11 @@
 
     <ol>
       <li>Register a wallet with your browser (for example,
-        the <a href="https://chapi-demo-wallet.digitalbazaar.com/">Demo Wallet</a>).</li>
+        the <a href="https://docknetwork.github.io/chapi-demo-wallet/">Demo Wallet</a>).</li>
       <li>Click the <strong>Login</strong> button.</li>
     </ol>
 
-    <a class="waves-effect waves-light btn" id="loginButton">Login</a>
+    <a class="waves-effect waves-light btn purple" id="loginButton">Login</a>
   </div>
 </div>
 
