--- a/wallet-ui-get.html
+++ b/wallet-ui-get.html
@@ -26,7 +26,7 @@
   <div class="card-panel" style="background-color: #2c2b3f">
     <div style="color: white">
       <h3><img src="favicon.png" style="float:left;">CHAPI Demo Wallet</h3>
-      <h5>get() event</h5>
+      <h5><strong>GET</strong> event</h5>
       <br>
     </div>
 
