--- a/wallet-ui-store.html
+++ b/wallet-ui-store.html
@@ -25,7 +25,7 @@
   <div class="card-panel" style="background-color: #2c2b3f">
     <div style="color: white">
       <h3><img src="favicon.png" style="float:left;">CHAPI Demo Wallet</h3>
-      <h5>store() event</h5>
+      <h5><strong>STORE</strong> event</h5>
       <br>
     </div>
 
