Style wallet contents.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <strong>Logged in:</strong> <span id="username"></span>
 
         <h6>Wallet Contents:</h6>
-        <ol id="walletContents"></ol>
+        <ol id="walletContents" class="collection"></ol>
       </p>
       <a class="waves-effect waves-light btn-large red darken-4" id="logoutButton">Reset and Logout</a>
     </div>
