--- a/wallet-ui-get.html
+++ b/wallet-ui-get.html
@@ -42,7 +42,7 @@
         <a class="waves-effect waves-light btn-small red darken-4" id="logoutButton">Reset and Logout</a>
 
         <h6>Wallet Contents:</h6>
-        <ol id="walletContents"></ol>
+        <ol id="walletContents" class="collection"></ol>
       </div>
     </div>
 
