--- a/wallet-ui-store.html
+++ b/wallet-ui-store.html
@@ -48,7 +48,7 @@
       <p><strong>Credential stored!</strong></p>
 
       <h6>Wallet Contents:</h6>
-      <ol id="walletContents"></ol>
+      <ol id="walletContents" class="collection"></ol>
 
       <a class="waves-effect waves-light btn center purple" id="doneButton">Done</a>
     </div>
